tests/ui/feature-gates/cfg_select.stderr
error[E0658]: use of unstable library feature `cfg_select`
  --> $DIR/cfg_select.rs:6:1
   |
LL | cfg_select! {
   | ^^^^^^^^^^
   |
   = note: see issue #115585 <https://github.com/rust-lang/rust/issues/115585> for more information
   = help: add `#![feature(cfg_select)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
